Fix comments icon on iOS

--- a/src/App.scss
+++ b/src/App.scss
@@ -235,7 +235,7 @@ html:lang(en) .petek-text {
       height: 20px;
       width: 20px;
       margin-right: 5px;
-      margin-top: 2px;
+      margin-top: 3px;
     }
   }
 
